update docker folder

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -8,6 +8,6 @@ services:
     restart: always
     volumes:
       - ./data:/workspace/data
-      - ls_config_data:/workspace/config
+      - ./ls_config_data:/workspace/config
 volumes:
   ls_config_data:
